--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "way-of-samuraits",
+  "homepage": "https://sergeykurilov.github.io/way-of-samuraits/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,7 +23,6 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "react-test-renderer": "^17.0.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.3.7",
@@ -35,7 +35,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -54,5 +56,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0",
+    "react-test-renderer": "^17.0.1"
   }
 }
