--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/redux-form": "^8.3.1",
     "@types/reselect": "^2.2.0",
     "axios": "^0.21.0",
+    "global": "^4.4.0",
+    "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
