--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
@@ -18,6 +19,7 @@
     "@types/redux-form": "^8.3.1",
     "@types/reselect": "^2.2.0",
     "axios": "^0.21.0",
+    "classnames": "^2.2.6",
     "global": "^4.4.0",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
