--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-form": "^8.3.1",
     "@types/reselect": "^2.2.0",
+    "antd": "^4.11.1",
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
     "formik": "^2.2.6",
