--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-form": "^8.3.1",
     "@types/reselect": "^2.2.0",
+    "@types/uuid": "^8.3.0",
     "antd": "^4.11.1",
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
@@ -35,6 +36,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "typescript": "^4.0.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
